added latest section

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
           <section class="my-20">
              <h1 class=" text-5xl  mb-24 text-black font-bold text-center" >latest News </h1>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5  justify-center">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center gap-10">
                   <div class="card bg-[#FFFFFF] shadow-xl">
-                    <figure><img src="/images//others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="images//others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body py-10">
                       <h2 class="card-title text-black text-bold py-5">Ducati XDIAVEL S-73</h2>
                       <p class="text-black ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -175,7 +175,7 @@
 
 
                   <div class="card bg-[#FFFFFF] shadow-xl">
-                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body py-10">
                       <h2 class="card-title text-black text-bold py-5">Motorcycles & Scooters</h2>
                       <p class="text-black ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -187,7 +187,7 @@
 
 
                   <div class="card bg-[#FFFFFF] shadow-xl">
-                    <figure><img src="/images//others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="images//others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body py-10">
                       <h2 class="card-title text-black text-bold py-5">2021 Honda CBR500R</h2>
                       <p class="text-black ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -209,7 +209,7 @@
                
               <div class="card w-96 bg-[#FFFFFF]  shadow-xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/others/user-1.png" alt="Shoes" class="rounded-xl" />
+                  <img src="images/others/user-1.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                   <h2 class="card-title">harry</h2>
