added another section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
               </div>
           </nav>
 
-          <div class="carousel w-full lg:h-[550] bg-orange-100">
+
+<!-- banner section -->
+          <div class="carousel w-full lg:h-[550px] bg-orange-100">
             <!-- slide1  --> 
 
             <div id="slide1" class="carousel-item relative w-full ">
-              <div class="flex flex-col lg:flow-row md:flex-row lg:p-20 p-10 items-center">
-                <div class="space-y-10 p-10 flex-1 ">
-                    <h2 class="text-black text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <div class="flex flex-col lg:flow-row md:flex-row lg:p-24 gap-72 p-4 py-24 ">
+                <div class="space-y-7 flex-1 ">
+                    <h2 class="text-black text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
                     <p class="text-black">Amet minim mollit non deserunt ullamco 
                       est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                     <button class="btn bg-[#E76F51;] text-white">Purchase</button>
@@ -60,17 +62,17 @@
                 </div>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide4" class="btn btn-circle">❮</a> 
-                <a href="#slide2" class="btn btn-circle">❯</a>
+                <a href="#slide4" class="btn btn-circle bg-white">❮</a> 
+                <a href="#slide2" class="btn btn-circle bg-white">❯</a>
               </div>
             </div> 
 
                  <!-- slide2 -->
             <div id="slide2" class="carousel-item relative w-full">
               <div id="slide1" class="carousel-item relative w-full ">
-                <div class="flex flex-col lg:flow-row md:flex-row lg:p-20 p-10 items-center">
-                  <div class="space-y-10 p-10 flex-1 ">
-                      <h2 class="text-black text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                <div class="flex flex-col lg:flow-row md:flex-row lg:p-24 gap-72 p-4 py-24">
+                  <div class="space-y-7  flex-1  ">
+                      <h2 class="text-black text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
                       <p class="text-black">Amet minim mollit non deserunt ullamco 
                         est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                       <button class="btn bg-[#E76F51;] text-white">Purchase</button>
@@ -80,8 +82,8 @@
                   </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle">❮</a> 
-                <a href="#slide3" class="btn btn-circle">❯</a>
+                <a href="#slide1" class="btn btn-circle bg-white">❮</a> 
+                <a href="#slide3" class="btn btn-circle bg-white">❯</a>
               </div>
             </div> 
 
@@ -90,9 +92,9 @@
 
             <div id="slide3" class="carousel-item relative w-full">
                   <div id="slide1" class="carousel-item relative w-full ">
-              <div class="flex flex-col lg:flow-row md:flex-row lg:p-20 p-10 items-center">
-                <div class="space-y-10 p-10 flex-1 ">
-                    <h2 class="text-black text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+              <div class="flex flex-col lg:flow-row md:flex-row lg:p-24 gap-72 p-4 py-24 items-center">
+                <div class="space-y-7 flex-1  ">
+                    <h2 class="text-black text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
                     <p class="text-black">Amet minim mollit non deserunt ullamco 
                       est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                     <button class="btn bg-[#E76F51;] text-white">Purchase</button>
@@ -102,17 +104,17 @@
                 </div>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle">❯</a>
+                <a href="#slide2" class="btn btn-circle bg-white">❮</a> 
+                <a href="#slide4" class="btn btn-circle bg-white">❯</a>
               </div>
             </div> 
 
             <!-- slide4 -->
             <div id="slide4" class="carousel-item relative w-full">
               <div id="slide1" class="carousel-item relative w-full ">
-                <div class="flex flex-col lg:flow-row md:flex-row lg:p-20 p-10 items-center">
-                  <div class="space-y-10 p-10 flex-1 ">
-                      <h2 class="text-black text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                <div class="flex flex-col lg:flow-row md:flex-row lg:p-24 gap-72 p-4 py-24 items-center">
+                  <div class="space-y-7 flex-1 ">
+                      <h2 class="text-black text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
                       <p class="text-black">Amet minim mollit non deserunt ullamco 
                         est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                       <button class="btn bg-[#E76F51;] text-white">Purchase</button>
@@ -122,8 +124,8 @@
                   </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle">❯</a>
+                <a href="#slide3" class="btn btn-circle bg-white ">❮</a> 
+                <a href="#slide1" class="btn btn-circle bg-white ">❯</a>
               </div>
             </div>
           </div>
@@ -224,7 +226,7 @@
 
 
                   <div class="card bg-[#FFFFFF] shadow-xl">
-                    <figure><img class="p-10" src="images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="p-10" src="images/others/user-2.png" alt="Shoes" /></figure>
                     <div class="card-body py-10">
                       <h2 class="card-title text-black text-bold py-5 justify-center">2021 Honda CBR500R</h2>
                       <p class="text-black  justify-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
@@ -237,7 +239,7 @@
 
 
                   <div class="card bg-[#FFFFFF] shadow-xl">
-                    <figure><img class="p-10" src="images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="p-10" src="images/others/user-3.png" alt="Shoes" /></figure>
                     <div class="card-body py-10">
                       <h2 class="card-title text-black text-bold py-5 justify-center">2021 Honda CBR500R</h2>
                       <p class="text-black  justify-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
