--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIKE ZONE</title>
+    <link rel="shortcut icon" href="images/icons/bike-removebg-preview.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -30,7 +31,7 @@
                       <li><a>Contact</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-xl max-w-sm"><img src="images/icons/bike-removebg-preview.png" alt=""></a>
+                  <a class="btn btn-ghost max-w-sm "><img class="w-1/2" src="images/others/bike-removebg-preview(1).png" alt=""></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
