--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
             <div class="hero min-h-screen bg-[#FFFFFF] py-10 shadow-2xl">
               <div class="hero-content flex-col lg:flex-row md:flex-row lg:gap-24 py-5">
-                <img src="/images/others/faq.png" class=" w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                <img src="images/others/faq.png" class=" w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
 
                 
                 <div>
